--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ example/04_Inference_Experimental/ZCB_9_3D_5065_sample_indices_variance_threshol
 example/06_Tomographic_Analysis/plots/fft_analysis/fft_3d.html 
 results/RSM/best_model_LatticeSC_Probe256x256_ZCB_9_3D__Noise_sim_ZCB_9_3D_S5065_N600_steps4_dp256_Unet_epoch_25_pearson_loss_symmetry_0.0/combined_diffraction_patterns.h5
 example/01_Data_Generation/Lattice400_Typeclathrate_II_DP256_Sim256_Grid1024_nsteps4_nscans180_centerConc0.75_NoiseOn_Nc10000_tomo_Abs0_PhaseScl1.00_ZCB_9_3D_scan5065/sim_ZCB_9_3D_S5065_N180_steps4_dp256.h5
+*.npz
+*.h5
+*.tif
+*.tiff
